@@ -4,6 +4,7 @@ import app.dto.rq.TweetRequest;
 import app.dto.rs.TweetResponse;
 import app.exceptions.tweetError.TweetIsNotFoundException;
 import app.model.Tweet;
+import app.service.AttachmentImagesService;
 import app.service.TweetActionService;
 import app.service.TweetService;
 import lombok.NoArgsConstructor;
@@ -13,7 +14,9 @@ import org.springframework.stereotype.Component;
 
 import javax.annotation.PostConstruct;
 import javax.servlet.http.HttpServletRequest;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @Component
@@ -25,15 +28,18 @@ public class TweetFacade extends GeneralFacade<Tweet, TweetRequest, TweetRespons
   @Autowired
   TweetActionService tweetActionService;
 
+  @Autowired
+  AttachmentImagesService attachmentImagesService;
+
   @PostConstruct
   public void init() {
     super.getMm().typeMap(Tweet.class, TweetResponse.class)
       .addMapping(src -> src.getBody(), TweetResponse::setBody)
       .addMapping(src -> src.getId(), TweetResponse::setTweetId)
-      .addMapping(src -> src.getAttachmentImages(), TweetResponse::setAttachmentsImages)
       .addMapping(src -> src.getUser().getUserTag(), TweetResponse::setUserTag)
       .addMapping(src -> src.getUser().getAvatarImgUrl(), TweetResponse::setUserAvatarImage)
       .addMapping(src -> src.getParentTweetId().getId(), TweetResponse::setParentTweetId)
+      //.addMapping(this::getImagesUrl, TweetResponse::setAttachmentsImages)
       .addMapping(this::getCountLikes, TweetResponse::setCountLikes)
       .addMapping(this::getCountReply, TweetResponse::setCountReply)
       .addMapping(this::getCountRetweet, TweetResponse::setCountRetweets);
@@ -51,12 +57,20 @@ public class TweetFacade extends GeneralFacade<Tweet, TweetRequest, TweetRespons
     return tweetActionService.getCountRetweet(tweet.getId());
   }
 
+  private Set<String> getImagesUrl(Tweet tweet) {
+    return tweetService.getTweet(tweet.getId())
+      .map(t -> t.getAttachmentImages())
+      .map(imageSet -> imageSet.stream()
+        .map(image -> image.getImgUrl()).collect(Collectors.toSet())).orElse(new HashSet<>());
+  }
+
   public TweetResponse getTweetById(Long tweetId) {
     TweetResponse tweetResponse = tweetService.getTweet(tweetId).map(this::convertToDto)
       .orElseThrow(() -> new TweetIsNotFoundException(tweetId));
     tweetResponse.setCountRetweets(tweetActionService.getCountRetweet(tweetResponse.getTweetId()));
     tweetResponse.setCountLikes(tweetActionService.getCountLikes(tweetResponse.getTweetId()));
     tweetResponse.setCountReply(tweetService.getCountReply(tweetResponse.getTweetId()));
+    tweetResponse.setAttachmentsImages(this.getImagesUrl(tweetService.getTweetById(tweetId)));
     return tweetResponse;
   }
 
@@ -69,10 +83,21 @@ public class TweetFacade extends GeneralFacade<Tweet, TweetRequest, TweetRespons
     ResponseEntity<List<Tweet>> responseEntity = tweetService.getUserTweets(userId, page, pageSize);
 
     List<Tweet> tweets = responseEntity.getBody();
-
     List<TweetResponse> tweetResponses = tweets.stream()
       .map(this::convertToDto)
-      .collect(Collectors.toList());
+      .toList();
+
+
+    return tweetResponses;
+  }
+
+  public List<TweetResponse> listTweets(int page, int pageSize) {
+    ResponseEntity<List<Tweet>> responseEntity = tweetService.listTweets(page, pageSize);
+
+    List<Tweet> tweets = responseEntity.getBody();
+    List<TweetResponse> tweetResponses = tweets.stream()
+      .map(this::convertToDto)
+      .toList();
 
 
     return tweetResponses;
@@ -103,7 +128,6 @@ public class TweetFacade extends GeneralFacade<Tweet, TweetRequest, TweetRespons
 
     return tweetResponses;
   }
-
 
   @Override
   public Tweet convertToEntity(TweetRequest dto) {
